--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
     <title>My second github repo</title>
 </head>
 <body>
-    
+    <h1>
+        Hey mama your vaigna know how to code
+    </h1>
+    <h2>
+        Iam not your mama. Iam your amma. got it?
+    </h2>
 </body>
 </html>
